# wps-vector-tileserver

./: COMPLIANCE.yaml  Makefile  README.md  fetch_feature_layer.py  generate_custom_zone_labels.py  pyproject.toml
openshift/: Dockerfile  nginx.conf  tileserv.yaml
