[tool.poetry]
name = "wps-tileserver"
version = "0.1.0"
description = "Scripts to assist with managing tile server"
authors = ["Sybrand Strauss <sybrand.strauss@gov.bc.ca>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
fire = "^0.4.0"
psycopg2 = "^2.9.2"
GeoAlchemy2 = "^0.9.4"
Shapely = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
